styling carousel, added directionnal icons and backdrop-filter to buttons, fixed layout stack overlap

--- a/components/carousel.module.css
+++ b/components/carousel.module.css
@@ -1,9 +1,12 @@
 .container {
+  position: relative;
+  top: auto;
+  left: ;
   width: 50vw;
   max-width: 960px;
   max-width: 90vw;
   max-height: 70vh;
-
+  z-index: 1;
 }
 
 .fullScreen {
@@ -17,30 +20,34 @@
 
 .carousel {
   position: relative;
-  z-index: 1;
-  background-color: black;
+  z-index: 2;
   display: flex;
   width: 50vw;
   height: 70vh;
+  box-sizing: content-box;
+  object-fit: contain;
   flex-direction: column;
   justify-content: center;
-  margin: 2px;
+
+  border-radius: 4px;
+  border: solid black 12px;
 }
 
 .imageDisplay {
   z-index: 2;
   width: 100%;
   height: 100%;
-  margin: 0 auto;
-  border-radius: 4px;
   box-sizing: content-box;
+  padding: 0;
 }
 
 .image {
+  position: relative;
   height: 100%;
   max-width: 100%;
   object-fit: contain;
   object-position: center;
+  padding: 0;
 }
 
 .overlay {
@@ -48,9 +55,9 @@
   top: 0;
   left: 0;
   z-index: 3;
-    width: 100%;
+  width: 100%;
   height: 100%;
-  padding: 2px;
+  padding: 0;
   margin: 0 auto;
   border-radius: 4px;
   box-sizing: content-box;
@@ -61,27 +68,51 @@
 }
 
 .button {
-  background-color: rgba(136, 136, 136, 0);
+  background-color: rgba(0, 0, 0, 0);
+  color: transparent;
   border: none;
-  height: 50px;
-  width: 50px;
-  border-radius: 50px;
-  text-shadow: 1px 1px silver;
+  height: 100%;
+  width: 100px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+
 }
 
-.button:hover {
-  background-color: rgba(151, 151, 151, 0.466);
-  border: none;
-  width: 50px;
+.button .icon {
+  color: rgba(105, 105, 105, 0.301);
+  vertical-align: middle;
+  justify-content: center;
+  height: 30px;
+  margin: 10px;
 }
 
 #backButton {
+border: solid 1px transparent;
 }
 #forward-button {
+  border: solid 1px transparent;
 }
+
+.button:hover {
+  backdrop-filter: blur(1px);
+  border-left-color: white;
+  border-right-color: white;
+  border-radius: 2px;
+  font-size: large;
+  color: black;
+  text-shadow: 1px 1px lightgray;
+}
+
+.button:hover .icon{
+
+}
+
+
 
 .filler {
   flex-grow: 2;
-  background-color: rgba(136, 136, 136, 0.3);
 }
 
