--- a/styles/global.css
+++ b/styles/global.css
@@ -21,6 +21,12 @@ body {
 * {
 }
 
+
+button:focus {
+    border: none;
+    outline: none;
+}
+
 main {
   background-color: ;
 }
